chore(dbt): update project config

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   solana-dbt-model:
-    # Applies to all files under models/example/
-    example:
+    trillium-datas:
       +materialized: table
