chore(dbt): fix dataModel name

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'solana-dbt-model'
+name: 'solana_dbt_model'
 version: '1.0.0'
 config-version: 2
 
@@ -36,6 +36,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  solana-dbt-model:
+  solana_dbt_model:
     trillium-datas:
       +materialized: table
